5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1664_2975.log
== TEST (2019-04-16 10:21:51) 
-- CODE:
suco=int(input("entre com a quantidades de sucos: "))
sal= int(input("entre com a quantidade de salgados: "))
valor=float(input("entre com o valor disponivel: "))

valsu= suco*3
valsal=sal*3.50

if(valor=>(valsu+valsal)):
	print("Sim")
	
else:
	print("Nao")
-- ERROR:
File "XXXX", line 8
    if(valor=>(valsu+valsal)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:22:52) 
-- CODE:
suco=int(input("entre com a quantidades de sucos: "))
sal= int(input("entre com a quantidade de salgados: "))
valor=float(input("entre com o valor disponivel: "))

valsu= suco*3
valsal=sal*3.50
valtotal=valsu+valsal

if(valor=>valortotal):
	print("Sim")
	
else:
	print("Nao")
-- ERROR:
File "XXXX", line 9
    if(valor=>valortotal):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:25:38) 
-- CODE:
suco=int(input("entre com a quantidades de sucos: "))
sal= int(input("entre com a quantidade de salgados: "))
valor=float(input("entre com o valor disponivel: "))

valsu= suco*3
valsal=sal*3.50
valtotal=valsu+valsal
print(valtotal)


-- OUTPUT:
13.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:27:44) 
-- CODE:
suco=int(input("entre com a quantidades de sucos: "))
sal= int(input("entre com a quantidade de salgados: "))
valor=float(input("entre com o valor disponivel: "))

valsu= suco*3
valsal=sal*3.50
valtotal=valsu+valsal
print(valtotal)

if(valtotal<=valor):
	
	print("Sim")
	
else:
	print("Nao")

-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:28:03) 
-- CODE:
suco=int(input("entre com a quantidades de sucos: "))
sal= int(input("entre com a quantidade de salgados: "))
valor=float(input("entre com o valor disponivel: "))

valsu= suco*3
valsal=sal*3.50
valtotal=valsu+valsal
print(valtotal)

if(valtotal<=valor):
	
	print("Sim")
	
else:
	print("Nao")

-- EXECUTION TIME:
0.126719
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
Sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
Nao
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
